--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="160dp"
-    android:background="@drawable/background"
+    android:background="@drawable/edu"
     android:padding="20dp">
     <ImageView
         android:src="@drawable/user"
@@ -18,6 +18,8 @@
         android:text="Akshay Gohil"
         android:textColor="@color/white"
         android:textStyle="bold"
+        android:layout_marginVertical="0dp"
+        android:textSize="20dp"
         android:layout_marginTop="5dp" />
 
     <TextView
