--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -8,5 +8,8 @@
 <item android:id="@+id/t_attend" android:title="Teacher Attendance" android:icon="@drawable/ic_teacher_attend"/>
 <item android:id="@+id/portion_details" android:title="Portion Details" android:icon="@drawable/ic_testdetails"/>
 <item android:id="@+id/announcements" android:title="Announcements" android:icon="@drawable/ic_announcement"/>
-<item android:id="@+id/logout" android:title="Logout" android:icon="@drawable/ic_logout" />
+    <item
+        android:id="@+id/logout"
+        android:icon="@drawable/ic_logout"
+        android:title="Logout" />
 </menu>
