--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -19,21 +19,25 @@
                 android:src="@drawable/ic_user"
                 android:layout_width="90dp"
                 android:layout_height="90dp" />
+
             <TextView
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
-                android:textColor="@color/white"
-                android:textSize="20sp"
                 android:text="Akshay Gohil"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            <TextView
-                android:layout_marginTop="8dp"
                 android:textColor="@color/white"
-                android:layout_gravity="center"
-                android:text="7208121247"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/tv_numb"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:text="7208121247"
+                android:textColor="@color/white" />
         </LinearLayout>
         <android.support.v7.widget.CardView
             android:layout_marginTop="200dp"
@@ -59,14 +63,16 @@
                         android:text="Batch"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
+
                     <TextView
-                        android:layout_gravity="center"
-                        android:textColor="#4a4a4a"
-                        android:textStyle="bold"
-                        android:textSize="24dp"
-                        android:text="Xth-A"
+                        android:id="@+id/tvBatch"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Xth-A"
+                        android:textColor="#4a4a4a"
+                        android:textSize="24dp"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -81,14 +87,16 @@
                         android:text="Timing"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
+
                     <TextView
-                        android:layout_gravity="center"
-                        android:textColor="#4a4a4a"
-                        android:textStyle="bold"
-                        android:textSize="24dp"
-                        android:text="Morning"
+                        android:id="@+id/tvTiming"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="Morning"
+                        android:textColor="#4a4a4a"
+                        android:textSize="24dp"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -103,14 +111,16 @@
                         android:text="Year"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
+
                     <TextView
-                        android:layout_gravity="center"
-                        android:textColor="#4a4a4a"
-                        android:textStyle="bold"
-                        android:textSize="24dp"
-                        android:text="2018"
+                        android:id="@+id/tvYear"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="2018"
+                        android:textColor="#4a4a4a"
+                        android:textSize="24dp"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -123,31 +133,198 @@
         android:layout_gravity="center"
         android:orientation="vertical"
         android:layout_width="300dp"
-        android:layout_height="200dp">
-        
-        <LinearLayout
-            android:orientation="horizontal"
+        android:layout_height="300dp">
+        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+        <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:textColor="#4a4a4a"
-                android:textSize="20dp"
-                android:text="Student Name"
-                android:layout_width="150dp"
-                android:layout_height="wrap_content" />
+            android:layout_height="match_parent">
 
-            <TextView
-                android:layout_alignParentRight="true"
-                android:layout_width="150dp"
+            <TableRow
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Akshay"
-                android:textColor="#4a4a4a"
-                android:textSize="20dp" />
+                android:orientation="horizontal"
+                android:padding="10dp">
 
-        </LinearLayout>
-        <View
-            android:layout_width="wrap_content"
-            android:layout_height="2dp"
-            android:background="#ffffff"/>
+                <TextView
+                    android:textColor="#4a4a4a"
+                    android:textSize="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Name"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/tvName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Akshay"
+                    android:textAlignment="center"
+                    android:textColor="#4a4a4a"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+            </TableRow>
+            <TableRow
+                android:padding="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:textColor="#4a4a4a"
+                    android:textSize="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Father"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/tvFather"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Yogesh"
+                    android:textAlignment="center"
+                    android:textColor="#4a4a4a"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+            </TableRow>
+            <TableRow
+                android:padding="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:textColor="#4a4a4a"
+                    android:textSize="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Mother"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/tvMother"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Neeta"
+                    android:textAlignment="center"
+                    android:textColor="#4a4a4a"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+            </TableRow>
+            <TableRow
+                android:padding="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:textColor="#4a4a4a"
+                    android:textSize="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Contact P"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/tvContact"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="9029307960"
+                    android:textAlignment="center"
+                    android:textColor="#4a4a4a"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+            </TableRow>
+            <!--<TableRow
+            android:padding="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:textColor="#4a4a4a"
+                    android:textSize="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Email"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="leoakshay95@gmail.com"
+                    android:textAlignment="center"
+                    android:textColor="#4a4a4a"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+            </TableRow>-->
+            <TableRow
+                android:padding="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:textColor="#4a4a4a"
+                    android:textSize="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Course"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/tvCourse"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Xth Sum"
+                    android:textAlignment="center"
+                    android:textColor="#4a4a4a"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+            </TableRow>
+            <TableRow
+                android:padding="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:textColor="#4a4a4a"
+                    android:textSize="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Subjects"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/tvSubject"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Sicence"
+                    android:textAlignment="center"
+                    android:textColor="#4a4a4a"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+            </TableRow>
+
+        </TableLayout>
+        </ScrollView>
+
     </LinearLayout>
 </LinearLayout>
