--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/profile" android:title="Profile" android:icon="@drawable/ic_user" />
+    <item android:id="@+id/profile" android:title="Profile" android:icon="@drawable/ic_user" android:onClick="OnProfile"/>
     <item android:id="@+id/fee" android:title="Fee Details" android:icon="@drawable/ic_wallet" android:onClick="OnFee"/>
     <item android:id="@+id/attend" android:title="Attendance" android:icon="@drawable/ic_attendance"/>
     <item android:id="@+id/test" android:title="Test Details" android:icon="@drawable/ic_testdetails"/>
