--- a/app/src/main/res/layout/activity_test_activity.xml
+++ b/app/src/main/res/layout/activity_test_activity.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/testDrawer"
     tools:context="in.classguru.classguru.Test_activity">
 <include layout="@layout/test_layout" />
     <android.support.design.widget.NavigationView
