--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="160dp"
-    android:background="@drawable/edu"
+    android:background="#0891c7"
     android:padding="20dp">
     <ImageView
         android:src="@drawable/user"
