--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,6 +10,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="300dp">
+
         <LinearLayout
             android:background="@drawable/db_profile_header"
             android:orientation="vertical"
@@ -19,19 +21,28 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/ic_navigation"/>-->
-            <ImageView
-                android:layout_marginTop="32dp"
-                android:layout_gravity="center"
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/iv_profile"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 android:src="@drawable/ic_user"
-                android:layout_width="90dp"
-                android:layout_height="90dp" />
-
+                android:layout_gravity="center"
+                android:layout_marginTop="32dp"
+                android:adjustViewBounds="false"/>
+            <!--<ImageView
+                android:id="@+id/iv_profile"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="32dp"
+                android:adjustViewBounds="false"
+                android:src="@drawable/ic_user" />-->
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:text="Akshay Gohil"
                 android:textColor="@color/white"
                 android:textSize="20sp" />
@@ -44,21 +55,24 @@
                 android:layout_marginTop="8dp"
                 android:text="7208121247"
                 android:textColor="@color/white" />
+
+
         </LinearLayout>
         <android.support.v7.widget.CardView
+            app:cardCornerRadius="15dp"
             android:layout_margin="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <ImageView
-
+                android:background="#4af9fcfd"
                 android:id="@+id/iv_nav"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_navigation" />
         </android.support.v7.widget.CardView>
         <android.support.v7.widget.CardView
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="215dp"
             android:layout_centerHorizontal="true"
             android:background="#fff9ed"
             android:layout_width="320dp"
@@ -150,7 +164,7 @@
     <LinearLayout
         android:layout_gravity="center"
         android:orientation="vertical"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="300dp">
         <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
@@ -186,7 +200,7 @@
                     android:textStyle="bold" />
             </TableRow>
             <TableRow
-                android:padding="10dp"
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
