--- a/app/src/main/res/layout/fee_layout.xml
+++ b/app/src/main/res/layout/fee_layout.xml
@@ -183,24 +183,120 @@
         </TableLayout>
 
     </RelativeLayout>
-
-    <RelativeLayout
+    <ScrollView
         android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="0.7">
-        <TableLayout
+        android:layout_weight="1.5">
+        <HorizontalScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <TableRow>
-                <TextView
-                    android:layout_weight="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+            <TableLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
 
-                    android:text="Working on layouts" />
-            </TableRow>
-        </TableLayout>
-    </RelativeLayout>
+                <TableRow android:layout_weight="9">
+
+                    <TextView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+
+                        android:text="Payment \n Mode"
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
+
+                    <TextView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+
+                        android:text="Payment \n Date"
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
+
+                    <TextView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+
+                        android:text="Cheque \n Date"
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
+
+                    <TextView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+
+                        android:text="Bank \n Name"
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
+
+                    <TextView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+
+                        android:text="Cheque \n No."
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
+
+                    <TextView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+
+                        android:text="Transaction \n ID"
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
+
+                    <TextView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+
+                        android:text="Received \n "
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
+
+                    <TextView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+
+                        android:text="Paid \n Recently"
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
+
+                    <TextView
+
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+
+                        android:text="Balance \n "
+                        android:textAlignment="center"
+                        android:textStyle="bold" />
+                </TableRow>
+            </TableLayout>
+
+        </HorizontalScrollView>
+
+    </ScrollView>
+    <ListView
+        android:padding="10dp"
+        android:layout_weight="0.9"
+        android:id="@+id/lv_feeShow"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></ListView>
 
 </LinearLayout>
