--- a/app/src/main/res/layout/attendance_viewlayout.xml
+++ b/app/src/main/res/layout/attendance_viewlayout.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
     <RelativeLayout
         android:padding="10dp"
         android:layout_width="match_parent"
@@ -10,46 +9,28 @@
         android:layout_weight="1">
 
         <TextView
-
+            android:id="@+id/tv_Date"
             android:layout_width="150dp"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_weight="1"
             android:text="Date"
             android:textAlignment="center"
-            android:textStyle="bold" />
+            />
 
         <TextView
-
+            android:id="@+id/tv_Attend"
             android:layout_width="150dp"
-            android:layout_height="match_parent"
+            android:layout_height="40dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:layout_weight="1"
             android:text="Attendance"
             android:textAlignment="center"
-            android:textStyle="bold" />
+            />
 
     </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight=".1">
-
-        <ListView
-            android:id="@+id/lv_attend"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true" />
-    </RelativeLayout>
-
-
-
-
-
 </LinearLayout>
