--- a/app/src/main/res/layout/fee_layout.xml
+++ b/app/src/main/res/layout/fee_layout.xml
@@ -7,21 +7,20 @@
     android:layout_height="match_parent"
     tools:context="in.classguru.classguru.Fee_activity">
 
-    <RelativeLayout
+    <!--<RelativeLayout
         android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1">
+        >-->
         <TableLayout
+            android:layout_weight="2"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TableRow android:padding="10dp">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
+                    android:textSize="15sp"
                     android:layout_weight="0.25"
                     android:text="InstallMent \n Option"
                     android:textStyle="bold" />
@@ -29,9 +28,7 @@
                     android:layout_weight="0.25"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@+id/textView"
-                    android:layout_toEndOf="@+id/textView"
-                    android:layout_toRightOf="@+id/textView"
+                    android:textSize="15sp"
                     android:text="Installment \n Type"
                     android:textStyle="bold"/>
 
@@ -39,9 +36,7 @@
                     android:layout_weight="0.25"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@+id/textView3"
-                    android:layout_toEndOf="@+id/textView3"
-                    android:layout_toRightOf="@+id/textView3"
+                    android:textSize="15sp"
                     android:text="Total \n Fees"
                     android:textStyle="bold"/>
 
@@ -49,21 +44,19 @@
                     android:layout_weight="0.25"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@+id/textView4"
-                    android:layout_toEndOf="@+id/textView4"
-                    android:layout_toRightOf="@+id/textView4"
+                    android:textSize="15sp"
                     android:text="Discount \n"
                     android:textStyle="bold"/>
+
             </TableRow>
+
             <TableRow android:padding="10dp">
 
                 <TextView
                     android:id="@+id/tv_Option"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
+                    android:textSize="15sp"
                     android:layout_weight="0.25"
                     android:text="100000" />
 
@@ -71,9 +64,7 @@
                     android:id="@+id/tv_Type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@+id/textView"
-                    android:layout_toEndOf="@+id/textView"
-                    android:layout_toRightOf="@+id/textView"
+                    android:textSize="15sp"
                     android:layout_weight="0.25"
                     android:text="100000" />
 
@@ -81,9 +72,7 @@
                     android:id="@+id/tv_Total"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@+id/textView3"
-                    android:layout_toEndOf="@+id/textView3"
-                    android:layout_toRightOf="@+id/textView3"
+                    android:textSize="15sp"
                     android:layout_weight="0.25"
                     android:text="100000" />
 
@@ -91,9 +80,7 @@
                     android:id="@+id/tv_Discount"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@+id/textView4"
-                    android:layout_toEndOf="@+id/textView4"
-                    android:layout_toRightOf="@+id/textView4"
+                    android:textSize="15sp"
                     android:layout_weight="0.25"
                     android:text="100000" />
             </TableRow>
@@ -103,18 +90,14 @@
                     android:layout_weight="0.25"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
+                    android:textSize="15sp"
                     android:text="Final \n Amount"
                     android:textStyle="bold"/>
                 <TextView
                     android:layout_weight="0.25"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@+id/textView"
-                    android:layout_toEndOf="@+id/textView"
-                    android:layout_toRightOf="@+id/textView"
+                    android:textSize="15sp"
                     android:text="Received \n"
                     android:textStyle="bold"/>
 
@@ -122,9 +105,7 @@
                     android:layout_weight="0.25"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@+id/textView3"
-                    android:layout_toEndOf="@+id/textView3"
-                    android:layout_toRightOf="@+id/textView3"
+                    android:textSize="15sp"
                     android:text="Balance\n"
                     android:textStyle="bold"/>
 
@@ -132,9 +113,7 @@
                     android:layout_weight="0.25"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@+id/textView4"
-                    android:layout_toEndOf="@+id/textView4"
-                    android:layout_toRightOf="@+id/textView4"
+                    android:textSize="15sp"
                     android:text="Amount/ \n Install"
                     android:textStyle="bold"/>
             </TableRow>
@@ -144,9 +123,7 @@
                     android:id="@+id/tv_Final"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
+                    android:textSize="15sp"
                     android:layout_weight="0.25"
                     android:text="100000" />
 
@@ -154,9 +131,7 @@
                     android:id="@+id/tv_Received"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@+id/textView"
-                    android:layout_toEndOf="@+id/textView"
-                    android:layout_toRightOf="@+id/textView"
+                    android:textSize="15sp"
                     android:layout_weight="0.25"
                     android:text="100000" />
 
@@ -164,9 +139,7 @@
                     android:id="@+id/tv_Balance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@+id/textView3"
-                    android:layout_toEndOf="@+id/textView3"
-                    android:layout_toRightOf="@+id/textView3"
+                    android:textSize="15sp"
                     android:layout_weight="0.25"
                     android:text="100000" />
 
@@ -174,24 +147,29 @@
                     android:id="@+id/tv_AmpInstall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignTop="@+id/textView4"
-                    android:layout_toEndOf="@+id/textView4"
-                    android:layout_toRightOf="@+id/textView4"
+                    android:textSize="15sp"
                     android:layout_weight="0.25"
                     android:text="100000" />
             </TableRow>
+            <View
+                android:layout_marginTop="10dp"
+                android:layout_width="fill_parent"
+                android:layout_height="2dp"
+                android:background="#b3b3b3"/>
         </TableLayout>
 
-    </RelativeLayout>
-    <ScrollView
-        android:padding="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1.5">
+
         <HorizontalScrollView
+            android:layout_weight="1.2"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <LinearLayout
+
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
             <TableLayout
+                android:layout_weight="4.5"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent">
 
@@ -199,18 +177,16 @@
 
                     <TextView
 
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
-
                         android:text="Payment \n Mode"
                         android:textAlignment="center"
                         android:textStyle="bold" />
 
                     <TextView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
 
                         android:text="Payment \n Date"
@@ -218,9 +194,8 @@
                         android:textStyle="bold" />
 
                     <TextView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
 
                         android:text="Cheque \n Date"
@@ -228,9 +203,8 @@
                         android:textStyle="bold" />
 
                     <TextView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
 
                         android:text="Bank \n Name"
@@ -238,9 +212,8 @@
                         android:textStyle="bold" />
 
                     <TextView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
 
                         android:text="Cheque \n No."
@@ -248,9 +221,8 @@
                         android:textStyle="bold" />
 
                     <TextView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
 
                         android:text="Transaction \n ID"
@@ -258,9 +230,8 @@
                         android:textStyle="bold" />
 
                     <TextView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
 
                         android:text="Received \n "
@@ -268,9 +239,8 @@
                         android:textStyle="bold" />
 
                     <TextView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
 
                         android:text="Paid \n Recently"
@@ -278,9 +248,8 @@
                         android:textStyle="bold" />
 
                     <TextView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_width="80dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
 
                         android:text="Balance \n "
@@ -288,15 +257,16 @@
                         android:textStyle="bold" />
                 </TableRow>
             </TableLayout>
+            <ListView
+                android:layout_weight="1"
+                android:id="@+id/lv_feeShow"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"></ListView>
+            </LinearLayout>
 
         </HorizontalScrollView>
 
-    </ScrollView>
-    <ListView
-        android:padding="10dp"
-        android:layout_weight="0.9"
-        android:id="@+id/lv_feeShow"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+    <!--</ScrollView>-->
+
 
 </LinearLayout>
