--- a/app/src/main/res/layout/test_viewlayout.xml
+++ b/app/src/main/res/layout/test_viewlayout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
@@ -14,58 +13,58 @@
             <TableRow android:padding="10dp">
 
                 <TextView
-                    android:layout_width="70dp"
+
+                    android:id="@+id/tv_testDate"
+                    android:layout_width="100dp"
                     android:layout_height="match_parent"
-                    android:text="Upload \n ID"
-                    android:textAlignment="center"
-                    android:textStyle="bold" />
+                    android:text="Test \n Date"
+                    android:textAlignment="center" />
 
                 <TextView
+
+                    android:id="@+id/tv_testBatch"
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="File \n Name"
-                    android:textAlignment="center"
-                    android:textStyle="bold" />
+                    android:text="Batch \n Id"
+                    android:textAlignment="center" />
 
                 <TextView
+
+                    android:id="@+id/tv_Obtain"
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="Description"
-                    android:textAlignment="center"
-                    android:textStyle="bold" />
+                    android:text="Obtained \n Marks"
+                    android:textAlignment="center" />
 
                 <TextView
+
+                    android:id="@+id/tv_Total"
                     android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="Faculty"
-                    android:textAlignment="center"
-                    android:textStyle="bold" />
+                    android:text="Total \n Marks"
+                    android:textAlignment="center" />
 
                 <TextView
-                    android:layout_width="70dp"
+
+                    android:id="@+id/tv_Passing"
+                    android:layout_width="60dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="Upload Date"
-                    android:textAlignment="center"
-                    android:textStyle="bold" />
+                    android:text="Passing"
+                    android:textAlignment="center" />
 
+                <TextView
+
+                    android:id="@+id/tv_Subject"
+                    android:layout_width="60dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="Subject"
+                    android:textAlignment="center" />
             </TableRow>
         </TableLayout>
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight=".15">
-
-        <ListView
-
-            android:id="@+id/lv_assign"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
     </RelativeLayout>
 </LinearLayout>
